upldated home with logos and links

--- a/index.html
+++ b/index.html
@@ -3,35 +3,54 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Holy Cow Sanctuary</title>
+  <title>Holy Cow Farm Sanctuary</title>
   <link rel="stylesheet" href="css/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,400;0,700&family=Asap+Condensed:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <h1>Welcome to Holy Cow Farm Sanctuary</h1>
-    <p>Protecting sacred lives, one cow at a time.</p>
-  </header>
+  <div class="corner-border corner-left"></div>
+  <div class="corner-border corner-right"></div>
 
-  <main>
-    <section>
-      <h2>Our Mission</h2>
-      <p>We provide lifelong care and love for rescued cows and animals in need.</p>
-    </section>
+  <header class="hero">
+  <img src="img/holy-cow-logo.png" alt="Holy Cow Logo" class="logo-centered" />
+  <h1 class="site-title">Holy Cow Farm Sanctuary</h1>
+  <p class="site-tagline">A family-run forever home for rescued farm animals.</p>
+</header>
 
-    <section>
-      <h2>How You Can Help</h2>
-      <ul>
-        <li>Donate or sponsor a cow</li>
-        <li>Visit or volunteer at the sanctuary</li>
-        <li>Share our mission with others</li>
-      </ul>
+
+  <main class="content">
+    <section class="intro">
+      <p>Images and videos soon</p>
+      <!-- Video or gallery goes here -->
     </section>
   </main>
 
-  <footer>
-    <p>&copy; 2025 Holy Cow Sanctuary | <a href="mailto:info@holycowsanctuary.farm">Contact Us</a></p>
-  </footer>
+<footer class="footer">
+  <ul class="contact-list">
+    <li>
+      <span class="icon-wrapper">
+        <img src="img/email-icon.png" alt="Email" />
+      </span>
+      <a href="mailto:info@holycowsanctuary.farm">info@holycowsanctuary.farm</a>
+    </li>
+    <li>
+      <span class="icon-wrapper">
+        <img src="img/map-icon.png" alt="Location" />
+      </span>
+      Castleton, Ontario, Canada
+    </li>
+    <li>
+      <span class="icon-wrapper">
+        <img src="https://www.paypalobjects.com/webstatic/mktg/logo/pp_cc_mark_74x46.jpg" alt="Donate with PayPal" />
+      </span>
+      <a href="https://paypal.me/HolyCowDonations" target="_blank" rel="noopener">Support the Sanctuary</a>
+    </li>
+  </ul>
+</footer>
 
-  <script src="js/main.js"></script>
+
+  <!-- Corner borders -->
+  <div class="corner-border corner-left"></div>
+  <div class="corner-border corner-right"></div>
 </body>
 </html>
