Scroll banner added

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <p class="site-tagline">A family-run forever home for rescued farm animals.</p>
   </header>
 
+  <section class="parallax" style="background-image: url('img/pano01.jpg');"></section>
 
   <main class="content">
     <section class="carousel">
@@ -47,10 +48,6 @@
         —  thank you for being part of their story.
       </p>
     </div>
-
-
-</div>
-
 
   </main>
 
